Correção do método perimetros()